--- a/authentication-lab/templates/home.html
+++ b/authentication-lab/templates/home.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>home</title>
 </head>
 <body>
-    Great Job!
-    <a href="/home">Home page</a>
+    <a href="/signout"><h1>Sign out</h1></a>
 </body>
 </html>
