--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -15,6 +15,18 @@
         <p >
             Please fill up your information below to sign up.
         </p>
+        <div>
+            <label>Full Name</label>
+            <div>
+                <input type="text" name="fullname" id="fullnameStr" required>
+            </div>
+        </div>
+        <div>
+            <label>Username*</label>
+            <div>
+                <input type="text"  name="username" id="usernameStr" required >
+            </div>
+        </div>
 
         <!-- Email -->
         <div>
@@ -29,6 +41,13 @@
             <label>Password*</label>
             <div class="input-group">
                 <input type="password"  name="password" minlength="6">
+            </div>
+        </div>
+
+        <div>
+            <label>Bio*</label>
+            <div class="input-group">
+                <input type="text"  name="bio" maxlength="280">
             </div>
         </div>
         
