--- a/authentication-lab/templates/add_tweet.html
+++ b/authentication-lab/templates/add_tweet.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form method="post" action="/">
+    <form method="post" action="/add_tweet">
         <div>
             <label>Title*</label>
             <div>
